--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .center {
     display: block;
-    margin-left: 35%;
+    margin-left: 31%;
     margin-right: 10%;
     width: 100%;
   }
@@ -36,5 +36,17 @@
     background-color: rgb(50, 134, 218);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
-    margin: 250px;
+    margin-top: 20px;
+    width: 49%;
+    float: right;
+}
+
+.coffee {
+    color:white;
+    background-color: rgb(207, 72, 72);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    margin-top: 20px;
+    width: 49%;
+    float: left;
 }
